WIP: local changes before pulling

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ PG_DATABASE=stay_directly_db
 PG_PASSWORD=Johnjzzy@2708
 PG_PORT=5432
 APP_ENV=production
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyCuBSnwo25Ek5tf1Nme839U9DzWLo2UWNE
+
