--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,16 @@
   "exclude": ["node_modules", "build", "dist", "**/*.test.ts"],
   "compilerOptions": {
     "incremental": true,
+    "resolveJsonModule": true,
+
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
     "noEmit": true,
     "module": "ESNext",
+    "target": "ES2020",
     "strict": true,
     "lib": ["esnext", "dom", "dom.iterable"],
     "jsx": "preserve",
+    
     "esModuleInterop": true,
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
